---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1551_1997_UPT-DataModel.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 462, column 2]
     │
     │ 
 461 │  -- object-identifiers assignment
 462 │  id-oc OBJECT IDENTIFIER ::= ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 463 │    {itu-t recommendation q 1551 --upt-- module(0) uptUsefulDefinitions(0)
 464 │     objectClasses(0) version1(0)}
     │
─────╯
